permitall "/error" for pass some exception